SystemT/system-t-runtime/testdata/aql/AQLCompileErrorNewTests/parseErrorMsgTest/module1/test.aql
module module1;

-- Parse error- Simple identifier instead of keywords: view, table, function, external, or dictionary 
create view1 testView1 as
select 'someString' as col1 
from Document D;

-- Parse error- regular expression instead of a string literal
output view testView1 as /\/\*([^*]|\*[^\/])*\*\//;

create view 'testView2' as
select 'someString' as col1
from Document;

export view testView2;